ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ing
spec:
  ingressClassName: nginx
  rules:
  - host: "biswa.info"
    http:
      paths:
      - pathType: Prefix
        path: "/bar"
        backend:
          service:
            name: todo-service
            port:
              number: 80
